# nimma-ai-retail-shipment-predictor

./: README.md  main.py  pyproject.toml  shipment_wrapper.py
models/: large_scalarvalues.pkl  large_xgbmodel.pkl
src/: codes.py  shipment_predictor_optimized.py  xgb_processor.py
