[tool.poetry]
name = "nimma-ai-retail-shipment-predictor"
version = "1.0.0"
description = "Shipment date and time predictor"
authors = [
    "Omkar Mujgond <omkar.mujgond@technomarch.co.uk>"
]

[tool.poetry.dependencies]
python = "3.10.*"
toml = "0.10.1"

[tool.poetry.dev-dependencies]
typer = "^0.9.0"
progress = "^1.5"
matplotlib = "^3.8.0"	
tqdm = "^4.43.0"
requests = "^2.31.0"
related = "^0.7.2"
ujson = "^4.0.1"
jsonschema = "^4.19.0"
flask = "^2.3.0"
Flask-WTF = "^1.1.0"
taskipy = "^1.8.2"
jupyterlab-server = "^2.22.0"
jupyterlab = "~4.0.0"
numpy = "^1.26.0"
pandas = "^2.0.0"
seaborn = "^0.13.0"
SciPy = "^1.11.2"
statistics = "^1.0.3.5"
geopy = "^2.1.0"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
openpyxl = "~3.0.7"
functions-framework = "^3.5.0"
 
[tool.taskipy.tasks]
install_toc = "jupyter labextension install @jupyterlab/toc"
install_jupyter_kernel = "python -m ipykernel install --user --name=retail-shipment-predictor"
list_jupyter_kernels = "jupyter kernelspec list"
uninstall_jupyter_kernel = "jupyter kernelspec uninstall retail-shipment-predictor"



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
